first commit after ditching windows

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode Nerd Font Mono
+# font_family      FiraCode Nerd Font Mono
+font_family      JetBrainsMono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -24,7 +25,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 18
 
 #: Font size (in pts)
 
@@ -732,7 +733,7 @@ single_window_margin_width -1
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-window_padding_width 0
+window_padding_width 5
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -764,7 +765,7 @@ inactive_text_alpha 1.0
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations no
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -858,7 +859,7 @@ tab_bar_margin_height 0.0 0.0
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -974,15 +975,15 @@ tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title
 #: {activity_symbol} are not present in the template, they are
 #: prepended to it.
 
-active_tab_title_template none
+# active_tab_title_template none
 
 #: Template to use for active tabs. If not specified falls back to
 #: tab_title_template.
-# active_tab_foreground   #000
-# active_tab_background   #eee
+active_tab_foreground   #98971a 
+active_tab_background   #fcba03
 active_tab_font_style   bold-italic
-# inactive_tab_foreground #444
-# inactive_tab_background #999
+inactive_tab_foreground #FFFFFF
+# inactive_tab_background #000000
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles.
@@ -990,7 +991,7 @@ inactive_tab_font_style normal
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
-# tab_bar_margin_color none
+# tab_bar_margin_color #000000
 
 #: Color for the tab bar margin area. Defaults to using the terminal
 #: background color for margins above and below the tab bar. For side
@@ -999,9 +1000,9 @@ inactive_tab_font_style normal
 
 #: }}}
 
-#: Color scheme {{{
-# foreground #C5C8C6
-# background #090B10
+Color scheme {{{
+foreground #C5C8C6
+background #fcba03
 
 #: The foreground and background colors.
 
@@ -1653,6 +1654,8 @@ map shift+insert paste_from_selection
 
 map kitty_mod+o pass_selection_to_program
 
+clipboard_control write-clipboard read-clipboard
+#
 #::  You can also pass the contents of the current selection to any
 #::  program with pass_selection_to_program. By default, the system's
 #::  open program is used, but you can specify your own, the selection
@@ -1726,7 +1729,7 @@ map kitty_mod+h show_scrollback
 #::  source. For example, the following opens the scrollback buffer in
 #::  less in an overlay window::
 
-#::      map f1 launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R
+map f1 launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay nvim
 
 #::  For more details on piping screen and buffer contents to external
 #::  programs, see launch <https://sw.kovidgoyal.net/kitty/launch/>.
@@ -2260,8 +2263,6 @@ map cmd+q quit
 #: }}}
 
 
-
 # BEGIN_KITTY_THEME
-# GitHub Dark
 include current-theme.conf
 # END_KITTY_THEME
