--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,61 +1,35 @@
-# vim:ft=kitty
+# Base16 Gruvbox dark, hard - kitty color config
+# Scheme by Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
+background #1d2021
+foreground #d5c4a1
+selection_background #d5c4a1
+selection_foreground #1d2021
+url_color #bdae93
+cursor #d5c4a1
+active_border_color #665c54
+inactive_border_color #3c3836
+active_tab_background #1d2021
+active_tab_foreground #d5c4a1
+inactive_tab_background #3c3836
+inactive_tab_foreground #bdae93
+tab_bar_background #3c3836
 
-## name: GitHub Dark
-## author: GitHub
-## license: MIT
+# normal
+color0 #1d2021
+color1 #fb4934
+color2 #b8bb26
+color3 #fabd2f
+color4 #83a598
+color5 #d3869b
+color6 #8ec07c
+color7 #d5c4a1
 
-#: The basic colors
-
-foreground #c9d1d9
-background #0d1117
-selection_foreground #0d1117
-selection_background #58a6ff
-
-
-#: Cursor colors
-
-cursor #58a6ff
-
-
-#: Tab bar colors
-
-tab_bar_background #010409
-active_tab_foreground #c9d1d9
-active_tab_background #0d1117
-inactive_tab_foreground #8b949e
-inactive_tab_background #010409
-
-
-#: The basic 16 colors
-
-#: black
-color0 #484f58
-color8 #6e7681
-
-#: red
-color1 #ff7b72
-color9 #ffa198
-
-#: green
-color2 #3fb950
-color10 #56d364
-
-#: yellow
-color3 #d29922
-color11 #e3b341
-
-#: blue
-color4 #58a6ff
-color12 #79c0ff
-
-#: magenta
-color5 #bc8cff
-color13 #d2a8ff
-
-#: cyan
-color6 #39c5cf
-color14 #56d4dd
-
-#: white
-color7 #b1bac4
-color15 #ffffff
+# bright
+color8 #665c54
+color9 #fe8019
+color10 #3c3836
+color11 #504945
+color12 #bdae93
+color13 #ebdbb2
+color14 #d65d0e
+color15 #fbf1c7
