--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,15 @@ bind -n M-L next-window
 bind X kill-pane
 bind K kill-window
 
+# Split pane vertically, same dir
+bind-key - split-window -v -c "#{pane_current_path}"
+
+# Split pane horizontally, same dir
+bind-key | split-window -h -c "#{pane_current_path}"
+
+# New window, same dir
+bind-key c new-window -c "#{pane_current_path}"
+
 # plugin-specific settings
 set -g @vim_navigator_mapping_left  "C-Left C-h"
 set -g @vim_navigator_mapping_right "C-Right C-l"
